# Tea-application

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.docx  DEPLOYMENT.md  README.md  docker-compose.yml
.github/workflows/: deploy.yml  eks-deploy.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py  router.py  serializers.py
backend/app/api/routes/: auth.py  cart.py  dashboard.py  health.py  orders.py  products.py  reviews.py  uploads.py  users.py
backend/app/core/: config.py  database.py  security.py  utils.py
backend/app/crud/: __init__.py  audit_log.py  cart.py  order.py  product.py  review.py  user.py
backend/app/models/: __init__.py  audit_log.py  cart.py  enums.py  order.py  product.py  review.py  role.py  user.py
backend/app/schemas/: __init__.py  audit.py  auth.py  cart.py  order.py  product.py  review.py  user.py
backend/app/services/: __init__.py  audit.py  auth.py  checkout.py
backend/scripts/: seed.py  start.sh
backend/tests/: conftest.py  test_flow.py  test_health.py
k8s/: configmap.yml  deployment.yml  secret.yml  serv.yml
public/: account.html  admin.html  cart.html  checkout.html  home.html  index.html  login.html  shop.html  signup.html
public/css/: app.css
public/js/: api.js  ui.js
