[project]
name = "assamtea-backend"
version = "0.1.0"
description = "ASSAM TEA — FastAPI backend"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI uses `Depends(...)` in argument defaults by design.
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
